--- a/prcssng.ipynb
+++ b/prcssng.ipynb
@@ -2,9 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               filename source_format  \\\n",
+      "533   C:\\Users\\spide\\OneDrive\\Desktop\\Bachlorz\\Tende...           pdf   \n",
+      "1346  C:\\Users\\spide\\OneDrive\\Desktop\\Bachlorz\\Tende...           pdf   \n",
+      "1172  C:\\Users\\spide\\OneDrive\\Desktop\\Bachlorz\\Tende...           pdf   \n",
+      "1448  C:\\Users\\spide\\OneDrive\\Desktop\\Bachlorz\\Tende...           pdf   \n",
+      "811   C:\\Users\\spide\\OneDrive\\Desktop\\Bachlorz\\Tende...           pdf   \n",
+      "\n",
+      "                                                content  \n",
+      "533   Tender specifications Tender specifications TE...  \n",
+      "1346  EUROPEAN UNION SATELLITE CENTRE REFERENCE: SAT...  \n",
+      "1172  Annex I - EN – V2.0 - INVITATION TO TENDER No ...  \n",
+      "1448  Ref. Ares(2024)5063990 - 12/07/2024 Call for T...  \n",
+      "811   Ref. Ares(2023)8693502 - 18/12/2023 DOCUMENT V...  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from transformers import BertTokenizer, BertModel\n",
